--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^7.14.0"
